--- a/nx.json
+++ b/nx.json
@@ -10,5 +10,9 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "mynestapp": {
+      "tags": []
+    }
+  }
 }
