--- a/package.json
+++ b/package.json
@@ -26,15 +26,32 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^6.8.3",
+    "@nestjs/core": "^6.8.3",
+    "@nestjs/platform-express": "^6.8.3",
+    "reflect-metadata": "^0.1.13"
+  },
   "devDependencies": {
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.8.3",
+    "@nrwl/eslint-plugin-nx": "9.0.3",
+    "@nrwl/jest": "9.0.3",
+    "@nrwl/nest": "^9.0.3",
+    "@nrwl/node": "9.0.3",
     "@nrwl/workspace": "9.0.3",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
     "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "jest": "24.1.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.18.2"
+    "typescript": "~3.7.4"
   }
 }
